# rustration

./: Cargo.toml  README.md
src/: interpreter.rs  main.rs  token.rs
src/compile/: bytecode.rs  compiler.rs  mod.rs  optimizer.rs
src/parse/: ast.rs  error.rs  mod.rs  parsing.rs  token.rs
test_files/: aas.b  bfi.b  input.b  life.b  loop.b  rust.b  test.b
