[package]
name = "rustration"
version = "0.1.0"
authors = ["Daniel Seitz <dnseitz@gmail.com>"]
repository = "https://github.com/dnseitz/rustration"
description = "A toy Brainfuck compiler/interpreter"
readme = "README.md"
license = "Apache-2.0"
exclude = [
  "test_files/*"
]

[dependencies]
clap = "2.19"
